--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  background: radial-gradient(cyan, blue);
-	border-radius: 10px;
+  background: radial-gradient(blue, #7d7dff);
+	border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(blue, cyan);
-	border-radius: 10px;
+  background: linear-gradient(#7d7dff, blue);
+	border-radius: 3px;
 }
 
 .txt {
@@ -29,14 +29,63 @@ a {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.other_txt {
+	transition-duration: .4s;
+}
+
+.other_txt:hover {
+	text-shadow: 0 0 7.5px #ff0000;
+}
+
 #btn {
 	outline: none;
 	background: linear-gradient(blue, #7d7dff);
 	border: 1px dotted black;
 	border-radius: 5px;
+	transition-duration: .4s;
+	box-shadow: 0 5px 5px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#btn:hover {
+	padding: 3px 10px;
+	box-shadow: 13px 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 #inp {
 	outline: none;
 	border-radius: 5px;
+}
+
+#new_pg_btn {
+	background: linear-gradient(blue, #7d7dff);
+	padding: 10px 10px;
+	border: 1px dashed blue;
+	border-radius: 10px;
+	transition-duration: .4s;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#new_pg_btn:hover {
+	padding: 15px 15px;
+	border: 1px dashed blue;
+	box-shadow: 13px 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+a {
+	text-decoration: none;
+}
+
+img {
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	padding: 3px 3px;
+	transition-duration: .4s;
+}
+
+img:hover {
+	box-shadow: 0 0 5px 5px rgba(0, 140, 186, 0.5);
+}
+
+h1, h2, h4 {
+	text-shadow: 2px 2px 5px #000000;
 }
