--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  background: radial-gradient(blue, #7d7dff);
-	border-radius: 3px;
+  background: linear-gradient(#7d7dff, blue);
+	border-radius: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(#7d7dff, blue);
-	border-radius: 3px;
+  background: linear-gradient(blue,#7d7dff);
+	border-radius: 10px;
 }
 
 .txt {
@@ -48,7 +48,7 @@ a {
 
 #btn:hover {
 	padding: 3px 10px;
-	box-shadow: 13px 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 #inp {
@@ -88,4 +88,17 @@ img:hover {
 
 h1, h2, h4 {
 	text-shadow: 2px 2px 5px #000000;
+	transition-duration: .25s;
+}
+
+h1:hover {
+	text-shadow: 0 0 7.5px #ff0000;
+}
+
+h2:hover {
+	text-shadow: 0 0 7.5px #ff0000;
+}
+
+h4:hover {
+	text-shadow: 0 0 7.5px #ff0000;
 }
