--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
 	background: linear-gradient(#7d7dff, blue);
+	color: #dadada;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html {
@@ -37,26 +39,7 @@ a {
 	text-shadow: 0 0 7.5px #ff0000;
 }
 
-#btn {
-	outline: none;
-	background: linear-gradient(blue, #7d7dff);
-	border: 1px dotted black;
-	border-radius: 5px;
-	transition-duration: .4s;
-	box-shadow: 0 5px 5px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-#btn:hover {
-	padding: 3px 10px;
-	box-shadow: 0 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-#inp {
-	outline: none;
-	border-radius: 5px;
-}
-
-#new_pg_btn {
+.new_pg_btn {
 	background: linear-gradient(blue, #7d7dff);
 	padding: 10px 10px;
 	border: 1px dashed blue;
@@ -65,10 +48,11 @@ a {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-#new_pg_btn:hover {
+.new_pg_btn:hover {
 	padding: 15px 15px;
 	border: 1px dashed blue;
 	box-shadow: 13px 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	cursor: pointer;
 }
 
 a {
@@ -91,6 +75,10 @@ h1, h2, h4 {
 	transition-duration: .25s;
 }
 
+h1 {
+	display: inline-block;
+}
+
 h1:hover {
 	text-shadow: 0 0 7.5px #ff0000;
 }
@@ -101,4 +89,12 @@ h2:hover {
 
 h4:hover {
 	text-shadow: 0 0 7.5px #ff0000;
+}
+
+#me {
+	border-radius: 100px;
+	width: 75px;
+	height: auto;
+	display: inline-block;
+	border: 0px solid black;
 }
