--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background: linear-gradient(#7d7dff, blue);
+	background: linear-gradient(to right, #a5acd4, #9fbdc1);
 	color: #dadada;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -35,12 +35,17 @@ a {
 	transition-duration: .4s;
 }
 
-.other_txt:hover {
-	text-shadow: 0 0 7.5px #ff0000;
+p {
+	transition-duration: .4s;
+}
+
+.other_txt:hover, p:hover {
+	text-shadow: 0 0 7.5px rgba(0, 140, 186, 0.5);
+	color: #c2c2ff;
 }
 
 .new_pg_btn {
-	background: linear-gradient(blue, #7d7dff);
+	background: linear-gradient(#a5acd4, #7d7dff);
 	padding: 10px 10px;
 	border: 1px dashed blue;
 	border-radius: 10px;
@@ -79,16 +84,20 @@ h1 {
 	display: inline-block;
 }
 
+h1:hover, h2:hover, h4:hover {
+	color: #c2c2ff;
+}
+
 h1:hover {
-	text-shadow: 0 0 7.5px #ff0000;
+	text-shadow: 0 0 7.5px rgba(0, 140, 186, 0.5);
 }
 
 h2:hover {
-	text-shadow: 0 0 7.5px #ff0000;
+	text-shadow: 0 0 7.5px rgba(0, 140, 186, 0.5);
 }
 
 h4:hover {
-	text-shadow: 0 0 7.5px #ff0000;
+	text-shadow: 0 0 7.5px rgba(0, 140, 186, 0.5);
 }
 
 #me {
