--- a/projects.css
+++ b/projects.css
@@ -1,5 +1,5 @@
 body {
-	background: linear-gradient(#7d7dff, blue);
+	background: linear-gradient(to right, #a5acd4, #9fbdc1);
 }
 
 html {
@@ -15,22 +15,18 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  background: linear-gradient(#7d7dff, blue);
+  background: linear-gradient(#7d7dff, #9fbdc1);
 	border-radius: 15px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(blue, #7d7dff);
-	border-radius: 10px;
+  background: linear-gradient(#9fbdc1,#7d7dff);
+	border-radius: 15px;
 }
 
 .txt {
 	color: #dadada;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-img:hover {
-	box-shadow: 0 0 5px 5px rgba(0, 140, 186, 0.5);
 }
 
 img {
@@ -40,8 +36,12 @@ img {
 	transition-duration: .4s;
 }
 
+img:hover {
+	box-shadow: 0 0 5px 5px rgba(0, 140, 186, 0.5);
+}
+
 .new_pg_btn {
-	background: linear-gradient(blue, #7d7dff);
+	background: linear-gradient(#a5acd4, #7d7dff);
 	padding: 10px 10px;
 	border: 1px dashed blue;
 	border-radius: 10px;
