--- a/projects.css
+++ b/projects.css
@@ -55,3 +55,27 @@ img:hover {
 	box-shadow: 13px 12px 16px 5px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 	cursor: pointer;
 }
+
+.left_text {
+	text-align: left;
+	border: 2px dotted black;
+	padding: 10px 10px;
+	border-radius: 10px;
+	transition-duration: .4s;
+}
+
+.right_text {
+	text-align: right;
+	border: 2px dotted black;
+	padding: 10px 10px;
+	border-radius: 10px;
+	transition-duration: .4s;
+}
+
+.right_text:hover, .left_text:hover {
+	border: 2px dotted #7d7dff;
+}
+
+h1 {
+	text-align: center;
+}
